--- a/examples/testbed.ipynb
+++ b/examples/testbed.ipynb
@@ -496,8 +496,6 @@
     "# plot\n",
     "fig, ax = plt.subplots(1, 1, figsize=(3,3))\n",
     "\n",
-    "mag = 2\n",
-    "\n",
     "ax.step(\n",
     "    energy_grid,\n",
     "    interactions_numu_nc + interactions_nue_NC,\n",
@@ -538,6 +536,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Poisson significance estimate'\n",
+      "15.383219228334356\n",
+      "Significance estimate if there is a 20\\% uncertainty\n",
+      "1.0595074634265476\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Rough significance\n",
+    "energy_grid[11:22]\n",
+    "\n",
+    "# Poisson\n",
+    "print(\"Poisson significance estimate'\")\n",
+    "print(np.sum(interactions_nue_CC[11:22]) / np.sum(np.sqrt((interactions_numu_nc + interactions_nue_NC)[11:22])))\n",
+    "# 20 % errr\n",
+    "print(\"Significance estimate if there is a 20\\% uncertainty\")\n",
+    "print(np.sum(interactions_nue_CC[11:22]) / np.sum((interactions_numu_nc + interactions_nue_NC) * 0.2))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
    "outputs": [],
@@ -571,13 +597,13 @@
       "  c = c_pars[0] * (np.log(E))**c_pars[1]\n",
       "/home/unimelb.edu.au/smeighenberg/envs/erebus/lib/python3.10/site-packages/fennel/hadron_cascades.py:362: RuntimeWarning: invalid value encountered in double_scalars\n",
       "  d = d_pars[0] * (np.log(E))**d_pars[1]\n",
-      "/tmp/ipykernel_1988603/2309768099.py:13: RuntimeWarning: invalid value encountered in divide\n",
+      "/tmp/ipykernel_6735/2309768099.py:13: RuntimeWarning: invalid value encountered in divide\n",
       "  em_tmp  = zp_em[0] / np.trapz(zp_em[0], x=z_grid) * em_counts\n",
-      "/tmp/ipykernel_1988603/2309768099.py:14: RuntimeWarning: invalid value encountered in divide\n",
+      "/tmp/ipykernel_6735/2309768099.py:14: RuntimeWarning: invalid value encountered in divide\n",
       "  had_tmp = zp_had[0] / np.trapz(zp_had[0], x=z_grid) * had_counts\n",
-      "/tmp/ipykernel_1988603/2309768099.py:17: RuntimeWarning: invalid value encountered in divide\n",
+      "/tmp/ipykernel_6735/2309768099.py:17: RuntimeWarning: invalid value encountered in divide\n",
       "  electron_photons.append(zp_em[0] / np.trapz(zp_em[0], x=z_grid) * em_counts)\n",
-      "/tmp/ipykernel_1988603/2309768099.py:18: RuntimeWarning: invalid value encountered in divide\n",
+      "/tmp/ipykernel_6735/2309768099.py:18: RuntimeWarning: invalid value encountered in divide\n",
       "  hadron_photons.append(zp_had[0] / np.trapz(zp_had[0], x=z_grid) * had_counts)\n"
      ]
     }
@@ -739,9 +765,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1988603/3501186500.py:52: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
+      "/tmp/ipykernel_6735/3501186500.py:52: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
       "  spatial_cuts = np.array(spatial_cuts)\n",
-      "/tmp/ipykernel_1988603/3501186500.py:53: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
+      "/tmp/ipykernel_6735/3501186500.py:53: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
       "  return spatial_samples, np.array(timing_arr), spatial_cuts\n"
      ]
     }
@@ -1227,13 +1253,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bdaf5b86740b437f93fdee6b5bba0aa7",
+       "model_id": "46aa1a6b0965461f8b44f704cb18cf90",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1248,9 +1274,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1988603/3501186500.py:52: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
+      "/tmp/ipykernel_6735/3501186500.py:52: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
       "  spatial_cuts = np.array(spatial_cuts)\n",
-      "/tmp/ipykernel_1988603/3501186500.py:53: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
+      "/tmp/ipykernel_6735/3501186500.py:53: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
       "  return spatial_samples, np.array(timing_arr), spatial_cuts\n"
      ]
     }
@@ -1262,7 +1288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 37,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
