--- a/examples/testbed.ipynb
+++ b/examples/testbed.ipynb
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -688,13 +688,13 @@
       "  c = c_pars[0] * (np.log(E))**c_pars[1]\n",
       "/home/unimelb.edu.au/smeighenberg/envs/erebus/lib/python3.10/site-packages/fennel/hadron_cascades.py:362: RuntimeWarning: invalid value encountered in double_scalars\n",
       "  d = d_pars[0] * (np.log(E))**d_pars[1]\n",
-      "/tmp/ipykernel_96558/595070702.py:15: RuntimeWarning: invalid value encountered in divide\n",
+      "/tmp/ipykernel_129865/595070702.py:15: RuntimeWarning: invalid value encountered in divide\n",
       "  em_tmp  = zp_em[0] / np.trapz(zp_em[0], x=z_grid) * em_counts\n",
-      "/tmp/ipykernel_96558/595070702.py:16: RuntimeWarning: invalid value encountered in divide\n",
+      "/tmp/ipykernel_129865/595070702.py:16: RuntimeWarning: invalid value encountered in divide\n",
       "  had_tmp = zp_had[0] / np.trapz(zp_had[0], x=z_grid) * had_counts\n",
-      "/tmp/ipykernel_96558/595070702.py:19: RuntimeWarning: invalid value encountered in divide\n",
+      "/tmp/ipykernel_129865/595070702.py:19: RuntimeWarning: invalid value encountered in divide\n",
       "  electron_photons.append(zp_em[0] / np.trapz(zp_em[0], x=z_grid) * em_counts)\n",
-      "/tmp/ipykernel_96558/595070702.py:20: RuntimeWarning: invalid value encountered in divide\n",
+      "/tmp/ipykernel_129865/595070702.py:20: RuntimeWarning: invalid value encountered in divide\n",
       "  hadron_photons.append(zp_had[0] / np.trapz(zp_had[0], x=z_grid) * had_counts)\n"
      ]
     }
@@ -730,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -797,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -887,17 +887,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_96558/3501186500.py:52: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
-      "  spatial_cuts = np.array(spatial_cuts)\n",
-      "/tmp/ipykernel_96558/3501186500.py:53: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
-      "  return spatial_samples, np.array(timing_arr), spatial_cuts\n"
+     "ename": "TypeError",
+     "evalue": "event_generator() got multiple values for argument 'type'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[24], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Generating NC and CC events\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m spatial_samples_CC, timing_samples_CC, cuts_CC \u001b[38;5;241m=\u001b[39m \u001b[43mevent_generator\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m      4\u001b[0m \u001b[43m    \u001b[49m\u001b[43minteractions_nue_CC\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m10\u001b[39;49m\u001b[43m:\u001b[49m\u001b[38;5;241;43m22\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m      5\u001b[0m \u001b[43m    \u001b[49m\u001b[43menergy_grid\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m10\u001b[39;49m\u001b[43m:\u001b[49m\u001b[38;5;241;43m22\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m      6\u001b[0m \u001b[43m    \u001b[49m\u001b[43mdemo_sphere_radius\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m      7\u001b[0m \u001b[43m    \u001b[49m\u001b[43mrng\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m      8\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mtype\u001b[39;49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mCC\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\n\u001b[1;32m      9\u001b[0m \u001b[43m)\u001b[49m\n\u001b[1;32m     11\u001b[0m spatial_samples_NC, timing_samples_NC, cuts_NC \u001b[38;5;241m=\u001b[39m event_generator(\n\u001b[1;32m     12\u001b[0m     (interactions_numu_nc \u001b[38;5;241m+\u001b[39m interactions_nue_NC)[\u001b[38;5;241m10\u001b[39m:\u001b[38;5;241m22\u001b[39m],\n\u001b[1;32m     13\u001b[0m     energy_grid[\u001b[38;5;241m10\u001b[39m:\u001b[38;5;241m22\u001b[39m],\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     16\u001b[0m     \u001b[38;5;28mtype\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mNC\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m     17\u001b[0m )\n",
+      "\u001b[0;31mTypeError\u001b[0m: event_generator() got multiple values for argument 'type'"
      ]
     }
    ],
@@ -906,7 +907,6 @@
     "\n",
     "spatial_samples_CC, timing_samples_CC, cuts_CC = event_generator(\n",
     "    interactions_nue_CC[10:22],\n",
-    "    energy_grid[10:22],\n",
     "    demo_sphere_radius,\n",
     "    rng,\n",
     "    type='CC'\n",
@@ -914,7 +914,6 @@
     "\n",
     "spatial_samples_NC, timing_samples_NC, cuts_NC = event_generator(\n",
     "    (interactions_numu_nc + interactions_nue_NC)[10:22],\n",
-    "    energy_grid[10:22],\n",
     "    demo_sphere_radius,\n",
     "    rng,\n",
     "    type='NC'\n",
@@ -923,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -945,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1009,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1097,7 +1096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1134,7 +1133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1145,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1222,7 +1221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1242,7 +1241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1267,7 +1266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1356,7 +1355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1378,14 +1377,12 @@
     "    for set in tqdm(range(nTrials)):\n",
     "        _, timing_samples_CC, cuts_CC = event_generator(\n",
     "            signal_sets[set],  # Sampling the events as well!\n",
-    "            energy_grid[10:22],\n",
     "            demo_sphere_radius,\n",
     "            rng_trial,\n",
     "            type='CC'\n",
     "        )\n",
     "        _, timing_samples_NC, cuts_NC = event_generator(\n",
     "            background_sets[set],\n",
-    "            energy_grid[10:22],\n",
     "            demo_sphere_radius,\n",
     "            rng_trial,\n",
     "            type='NC'\n",
@@ -1418,7 +1415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1463,7 +1460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
